Adding QUIC request headers to the net log observer

The performance logs used in integration tests
(https://codereview.chromium.org/2705413004/) do not contain the
QUIC request headers. Since QUIC and H2 are structured similarly,
this is a minor change to support outputting QUIC request headers.

BUG=696731

Review-Url: https://codereview.chromium.org/2715743007
Cr-Commit-Position: refs/heads/master@{#453429}

Former-commit-id: 687ef074d2b0996276993f55547873dd8e9e4246